<resources>
    <string name="app_name">Layout_Activity</string>
    <string name="tgl_btn">Si</string>
    <string name="tgl_btn2">No</string>
    <string name="tgl_btn3">Hola</string>
    <string name="tgl_btn4">Adios</string>
    <string name="switch_btn">Copa del mundo Catar</string>
    <string name="toggle_btn2">Ganas de futbol</string>
    <string name="toggle_final1">Actividad entregada?</string>
    <string name="toggle_final2">Tarde pero seguro</string>
    <string name="opcio_1"> Jesucristo </string>
    <string name="opcio_2"> Mahoma </string>
    <string name="opcio_3"> Goku </string>
    <string name="marcam" />
    <string name="txt2">Y quien ganará la copa del mundo?</string>
    <string name="argentina">Argentina</string>
    <string name="españa">España</string>
    <string name="brasil">Brasil</string>
    <string name="inglaterra">Inglaterra</string>
    <string name="formulario_de_registro">FORMULARIO DE REGISTRO</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Telefono">Telefono</string>
    <string name="touch">toque para continuar</string>


</resources>