<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="¿Quien es nuestro salvador?"
        android:textSize="25sp"></TextView>


    <RadioGroup
        android:id="@+id/grbGrup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbOpcio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="opcion1"
            android:text="@string/opcio_1" />

        <RadioButton
            android:id="@+id/rbOpcio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="opcion2"
            android:text="@string/opcio_2" />

        <RadioButton
            android:id="@+id/rbOpcio3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="opcion3"
            android:text="@string/opcio_3" />

    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/txt2">
    </TextView>

    <CheckBox
        android:id="@+id/argentina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton1"
        android:text="@string/argentina"
        android:textColor="#0096FF"></CheckBox>


    <CheckBox
        android:id="@+id/españa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton2"
        android:text="@string/españa"
        android:textColor="#FF0000"></CheckBox>

    <CheckBox
        android:id="@+id/brasil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton3"
        android:text="@string/brasil"
        android:textColor="#00ff00"></CheckBox>

    <CheckBox
        android:id="@+id/inglaterra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="boton4"
        android:text="@string/inglaterra"></CheckBox>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</LinearLayout>
